green-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-app
spec:
  selector:
    app: green-app
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
